--- a/app/pom.xml
+++ b/app/pom.xml
@@ -28,6 +28,10 @@
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
+			<artifactId>vertx-config-hocon</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
 			<artifactId>vertx-lang-kotlin-coroutines</artifactId>
 		</dependency>
 		<dependency>
