--- a/app/pom.xml
+++ b/app/pom.xml
@@ -11,8 +11,24 @@
 
 	<artifactId>app</artifactId>
 	<properties>
-		<main.verticle>cn.zenliu.vertx.kotlin.WebApi</main.verticle>
+		<java.version>1.8</java.version>
+		<jooq.gen.user>zen</jooq.gen.user>
+		<jooq.gen.password>zen</jooq.gen.password>
+		<jooq.gen.jdbc>jdbc:postgresql://192.168.8.94:65432/db</jooq.gen.jdbc>
+		<jooq.gen.schema>public</jooq.gen.schema>
+		<jooq.gen.package>cn.zenliu.vertx.kotlin.model</jooq.gen.package>
+		<jooq.gen.output>src/main/java</jooq.gen.output>
+		<vertx.launcher>cn.zenliu.vertx.kotlin.Launcher</vertx.launcher>
+		<vertx.verticle>cn.zenliu.vertx.kotlin.WebApi</vertx.verticle>
 	</properties>
+	<profiles>
+		<profile>
+			<id>generate</id>
+			<properties>
+				<jooq.gen.skip>false</jooq.gen.skip>
+			</properties>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -36,7 +52,12 @@
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
+			<artifactId>vertx-pg-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
 			<artifactId>vertx-junit5</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
@@ -50,9 +71,26 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.jklingsporn</groupId>
+			<artifactId>vertx-jooq-generate</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.github.jklingsporn</groupId>
+			<artifactId>vertx-jooq-classic-reactive</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.jooq</groupId>
+				<artifactId>jooq-codegen-maven</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -60,6 +98,21 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>8</source>
+					<target>8</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
