--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,9 @@ ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = true
 ij_smart_tabs = true
 # ij_wrap_on_typing = false
-
+[*.xml]
+indent_style = space
+indent_size = 4
 [*.conf]
 indent_style = space
 indent_size = 2
