--- a/app/src/main/resources/vertx.conf
+++ b/app/src/main/resources/vertx.conf
@@ -3,11 +3,11 @@ webApi {
     port: 8002
   }
 }
-pg {
+postgres {
   characterEncoding: UTF-8
-  host: 192.168.8.94
+  host: 192.168.99.100
   port: 65432
-  database: db
+  database: pg
   user: zen
   password: zen
   pool{
