--- a/app/src/main/resources/vertx.conf
+++ b/app/src/main/resources/vertx.conf
@@ -5,9 +5,9 @@ webApi {
 }
 postgres {
   characterEncoding: UTF-8
-  host: 192.168.99.100
+  host: 192.168.8.94 #192.168.99.100
   port: 65432
-  database: pg
+  database: db #pg
   user: zen
   password: zen
   pool{
